Fix header z-index

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -16,8 +16,9 @@
   --default-spacing: 60px;
   --menu-height: 100px;
 
-  --z-index-top: 5;
-  --z-index-nav: 4;
+  --z-index-top: 6;
+  --z-index-nav: 5;
+  --z-index-image-absolute: 4;
   --z-index-nav-background: 3;
   --z-index-slider: 2;
   --z-index-default: 1;
